# patron-groups

./: .env_dist  .gitignore  DEPLOY.md  LICENSE.txt  README.md  build.sh  install_pyenv.sh  pyproject.toml  run_petl_dev.sh  run_petl_prod.sh  setup.py
config/: petl.ini
docs/: patron-groups-service-architecture.graffle
scripts/: petl  petl_q
src/main/docker/: Dockerfile  run_petl
src/main/python/: MANIFEST.in  README.md  requirements.txt  setup.py
src/main/python/config/: incommon_rsa_ca_bundle.pem  petl.ini
src/main/python/scripts/: petl
src/main/python/src/petal/: __init__.py  delta.py  grouper_query.py  ldap_query.py
src/patron_groups/config/: petl.ini
src/patron_groups/petal/: __init__.py  delta.py  grouper_query.py
src/patron_groups/scripts/: petl.py
src/petal/: __init__.py  delta.py  grouper_query.py  ldap_query.py
